--- a/assets/sccs/components/intromodul-default.scss
+++ b/assets/sccs/components/intromodul-default.scss
@@ -2,23 +2,63 @@
 
   /* ===================================================================== */
 
-  .containerText-claim{
+  .intromodulAbstandTop{
+    @include dynamic-distance(60, 140, padding-top);
+  }
+
+  /* ===================================================================== */
+
+  .containerText-head{
     grid-row: 1;
     grid-column-start: 2;
-    grid-column-end: 7;
+    grid-column-end: 6;
 
     @include wl-breakpoint(1200) {
       grid-column-end: 8;
     }
+
+    @include wl-breakpoint(900) {
+      grid-column-end: 12;
+    }
+
 
     @include wl-breakpoint(500) {
       grid-column-start: 1;
       grid-column-end: 13;
     }
 
-    background-color: #e6ecf0;
 
-    @include dynamic-distance(60, 110, padding-top);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: stretch;
+    align-content: stretch;
+
+
+    @include wl-breakpoint(1150){
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+      justify-content: flex-end;
+      align-items: stretch;
+      align-content: stretch;
+    }
+
+  }
+
+  /* ===================================================================== */
+
+  .containerText-headline{
+    width: 100%;
+  }
+
+  /* ===================================================================== */
+
+  .containerText-claim{
+
+    width: 100%;
+    @include dynamic-distance(15, 30, padding-bottom);
     @include responsive-font(15px, 17px, $base-font-family, $base-line-height);
 
     &.blue{
@@ -33,36 +73,26 @@
 
   /* ===================================================================== */
 
-  .containerText-headline{
-    grid-row: 2;
-    grid-column-start: 2;
-    grid-column-end: 6;
-
-    @include wl-breakpoint(1200) {
-      grid-column-end: 8;
-    }
-
-
-    @include wl-breakpoint(500) {
-      grid-column-start: 1;
-      grid-column-end: 13;
-    }
-
-   background-color: papayawhip;
-
-  }
-
-
-  /* ===================================================================== */
 
   .containerText-body {
-    grid-row: 3;
+    grid-row: 2;
     grid-column-start: 2;
     grid-column-end: 7;
 
 
     @include wl-breakpoint(1200) {
       grid-column-end: 8;
+    }
+
+    @include wl-breakpoint(900) {
+      grid-row: 4;
+      grid-column-start: 2;
+      grid-column-end: 12;
+    }
+
+    @include wl-breakpoint(1150) {
+      grid-column-start: 2;
+      grid-column-end: 12;
     }
 
     @include wl-breakpoint(500) {
@@ -110,23 +140,30 @@
   /* ===================================================================== */
 
   .containerBild {
-    grid-row: 1/5;
+    grid-row: 1/4;
     grid-column-start: 7;
     grid-column-end: 12;
+
+    @include wl-breakpoint(1150) {
+      grid-row: 1/2;
+    }
 
     @include wl-breakpoint(1200) {
       grid-column-start: 8;
       grid-column-end: 12;
     }
 
+    @include wl-breakpoint(900) {
+      grid-row: 3;
+      grid-column-start: 2;
+      grid-column-end: 12;
+      @include dynamic-distance(30, 50, padding-top);
+    }
+
     @include wl-breakpoint(500) {
       grid-column-start: 1;
       grid-column-end: 13;
     }
-
-    @include dynamic-distance(60, 110, padding-top);
-
-    background-color: #b7e591;
 
     img{
       width: 100%;
@@ -136,6 +173,5 @@
   }
 
   /* ===================================================================== */
-
 
 }
