--- a/assets/sccs/components/_haendlerFilterDropdown.scss
+++ b/assets/sccs/components/_haendlerFilterDropdown.scss
@@ -64,7 +64,7 @@
 
       &.disabled{
         color: #b5b5b5;
-        text-decoration: line-through solid $wl-color-blue;
+        text-decoration: line-through solid $wl-color-green;
         text-decoration-thickness: 2px;
       }
     }
