--- a/assets/sccs/core/_vars.scss
+++ b/assets/sccs/core/_vars.scss
@@ -51,6 +51,7 @@ $wl-color-black: #000000;
 $wl-color-blue: #1372D0;
 $wl-color-blue-dark: #001C57;
 $wl-color-green: #31C390;
+$wl-color-bg-teaser: #f3f8fd;
 
 
 // Farben Starter
