--- a/assets/sccs/components/_modul_haendlerFilter.scss
+++ b/assets/sccs/components/_modul_haendlerFilter.scss
@@ -15,6 +15,49 @@
 
       }
 
+      .teaser-result-info{
+        width: 100%;
+        padding-bottom:50px;
+        padding-left: 21px;
+
+        grid-row: 2;
+        grid-column-start: 2;
+        grid-column-end: 12;
+
+        @include wl-breakpoint(500) {
+          grid-column-start: 1;
+          grid-column-end: 13;
+        }
+
+        .productGroup{
+
+          @include responsive-font(15px, 17px, $base-font-family, $base-line-height);
+          padding-bottom: 15px;
+
+          span{
+            &.blue{
+              color: $wl-color-blue;
+            }
+
+            &.green{
+              color: $wl-color-green;
+            }
+
+            &.spacer{
+              color: $wl-color-blue-dark;
+            }
+          }
+
+        }
+
+        .produktTitle{
+          width: 100%;
+          @include responsive-font(15px, 18px, $font-family-DINNextLTPro-bold, 1.34);
+          padding-bottom: 3px;
+        }
+
+      }
+
       .teaser-container{
 
         width: 100%;
@@ -64,7 +107,71 @@
           display: inline-block;
           cursor: pointer;
 
-          background-color: #5bc0de;
+          background-color: $wl-color-bg-teaser;
+          border-radius: 30px;
+
+
+          .artikelCat{
+              width: 100%;
+              font-size: 0.8em;
+
+              display: flex;
+              flex-direction: row;
+              flex-wrap: wrap;
+              justify-content: flex-start;
+              align-items: center;
+              align-content: stretch;
+
+              padding-top: 23px;
+              padding-bottom: 17px;
+              padding-left: 35px;
+              padding-right: 35px;
+
+              @include wl-breakpoint(450) {
+                padding-top: 20px;
+                padding-bottom: 15px;
+                padding-left: 25px;
+                padding-right: 25px;
+              }
+
+              border-bottom: 2px solid $wl-color-blue;
+
+
+            @include responsive-font(15px, 17px, $base-font-family, $base-line-height);
+
+            span{
+              &.blue{
+                color: $wl-color-blue;
+              }
+
+              &.green{
+                color: $wl-color-green;
+              }
+
+              &.spacer{
+                color: $wl-color-blue-dark;
+              }
+            }
+
+
+          }
+
+          .artikelBody{
+               width: 100%;
+
+              padding-top: 35px;
+              padding-bottom: 30px;
+              padding-left: 35px;
+              padding-right: 35px;
+
+              @include wl-breakpoint(450) {
+                padding-top: 25px;
+                padding-bottom: 25px;
+                padding-left: 25px;
+                padding-right: 25px;
+              }
+          }
+
 
 
         }
