--- a/assets/sccs/components/intromodul-default-u-produktdetail.scss
+++ b/assets/sccs/components/intromodul-default-u-produktdetail.scss
@@ -14,7 +14,7 @@
     grid-column-end: 6;
 
     @include wl-breakpoint(1200) {
-      grid-column-end: 8;
+      grid-column-end: 7;
     }
 
     @include wl-breakpoint(900) {
@@ -61,13 +61,20 @@
     @include dynamic-distance(15, 30, padding-bottom);
     @include responsive-font(15px, 17px, $base-font-family, $base-line-height);
 
-    &.blue{
-      color: $wl-color-blue;
+    span{
+      &.blue{
+        color: $wl-color-blue;
+      }
+
+      &.green{
+        color: $wl-color-green;
+      }
+
+      &.spacer{
+        color: $wl-color-blue-dark;
+      }
     }
 
-    &.green{
-      color: $wl-color-green;
-    }
 
   }
 
@@ -82,6 +89,10 @@
 
     @include wl-breakpoint(1200) {
       grid-column-end: 8;
+    }
+
+    @include wl-breakpoint(1150) {
+      grid-column-end: 7;
     }
 
     @include wl-breakpoint(900) {
@@ -144,13 +155,15 @@
     grid-column-start: 7;
     grid-column-end: 12;
 
-    @include wl-breakpoint(1150) {
-      grid-row: 1/2;
-    }
 
     @include wl-breakpoint(1200) {
       grid-column-start: 8;
       grid-column-end: 12;
+    }
+
+    @include wl-breakpoint(1150) {
+      grid-row: 1/2;
+      grid-column-start: 7;
     }
 
     @include wl-breakpoint(900) {
@@ -168,6 +181,13 @@
     img{
       width: 100%;
       border-radius: 30px;
+    }
+
+    .introbildUnterschrift{
+      color: $wl-color-blue;
+      text-align: right;
+      padding-top: 15px;
+      font-size: 0.9em;
     }
 
   }
