--- a/templates/_extends-elements/templ_produkt-detail.twig
+++ b/templates/_extends-elements/templ_produkt-detail.twig
@@ -1,15 +1,9 @@
 {% extends 'main' %}
 
 {% block intro %}
-{% if pageId == '' %}{% set entry = seite404 %}{% endif %}
 <section class="wrapper-outer element-header">
-  <section class="wl-wrapper{% if pageId != 2 and sectionName != 'blog' %} contentIntro{% elseif pageId != 2 and sectionName == 'blog'  %} contentIntroBlog{% else %} contentIntroStart{% endif %}">
-    {% set matrixIntro = entry.moduleIntroMatrix %}
-    {% if matrixIntro is defined and matrixIntro %}
-      {% for block in matrixIntro %}
-        {% include ('_include-introblock-components/intromodul_' ~ block.type.handle) with {blockid: block.id, sectionname: entry.section.handle, pageid: entry.id}  %}
-      {% endfor %}
-    {% endif %}
+  <section class="wl-wrapper">
+        {% include ('_include-introblock-components/intromodul_produkt.twig')  %}
   </section>
 </section>
 {% endblock %}
