--- a/assets/sccs/components/_pagination-haendler.scss
+++ b/assets/sccs/components/_pagination-haendler.scss
@@ -25,8 +25,8 @@
 
         margin-bottom: 7px;
         margin-top: 7px;
-        margin-right: 8px;
-        margin-left: 8px;
+        margin-right: 4px;
+        margin-left: 4px;
 
         cursor: pointer;
       }
@@ -34,18 +34,14 @@
       a{
 
         &.btnPager{
-          color: $wl-color-black;
+          color: #98a4bc;
           width: 36px;
           height: 36px;
-          border: 2px solid $wl-color-blue;
-          text-align: center;
-          border-radius: 18px;
           transition: all 1s;
           text-decoration: none;
 
           &:hover{
-            color: $wl-color-blue;
-            border: 2px solid $wl-color-blue;
+            color: $wl-color-green;
             transition: all 1s;
           }
         }
@@ -53,15 +49,15 @@
         &.btnPager{
 
             &.active{
-              background-color: $wl-color-blue;
-              color: $wl-color-black;
+              color: $wl-color-blue-dark;
               width: 36px;
               height: 36px;
-              border: 2px solid $wl-color-blue;
               text-align: center;
               border-radius: 18px;
               transition: all 1s;
               text-decoration: none;
+
+              cursor: default;
             }
 
         }
@@ -81,46 +77,6 @@
 
   }
 
-  a {
-    &.links {
-
-      .pagination-arrow-left path{
-        stroke: $wl-color-black;
-        transition: all 1s;
-      }
-
-      color: $wl-color-black;
-      transition: all 1s;
-
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: flex-start;
-      align-items: center;
-      align-content: stretch;
-
-      text-decoration: none;
-      cursor: pointer;
-
-      &:hover{
-        color: $wl-color-grey;
-        transition: all 1s;
-
-        .pagination-arrow-left path{
-          stroke: $wl-color-grey;
-          transition: all 1s;
-        }
-      }
-
-      .pagination-back{
-        font-size: 13px;
-        @include wl-breakpoint(626) {
-          display: none;
-        }
-      }
-    }
-
-  }
 
   span{
     &.links{
@@ -128,53 +84,6 @@
         opacity: 0.5;
       }
     }
-  }
-
-
-  a {
-
-    &.rechts {
-
-      .pagination-arrow-right path{
-        stroke: $wl-color-black;
-        transition: all 1s;
-      }
-
-      color: $wl-color-black;
-      transition: all 1s;
-
-      display: flex;
-      flex-direction: row;
-      flex-wrap: nowrap;
-      justify-content: flex-end;
-      align-items: center;
-      align-content: stretch;
-
-      text-decoration: none;
-      cursor: pointer;
-
-      &:hover{
-        color: $wl-color-grey;
-        transition: all 1s;
-
-        .pagination-arrow-right path{
-          stroke: $wl-color-grey;
-          transition: all 1s;
-        }
-      }
-
-
-      span{
-        &.pagination-next{
-          font-size: 14px;
-          @include wl-breakpoint(626) {
-            display: none;
-          }
-        }
-      }
-
-    }
-
   }
 
   span{
@@ -187,22 +96,51 @@
 
   .pagination-arrow-right{
     white-space: nowrap;
-    padding-left: 35px;
+    padding-left: 15px;
     margin-top: 14px;
+    margin-left: 12px;
+
+    svg{
+      &#pagination-arrow-right{
+
+        cursor: pointer;
+
+        &:hover{
+          path{
+            &#pagination-arrow-right-fill {
+              fill: $wl-color-green;
+            }
+          }
+        }
+
+      }
+    }
   }
 
   .pagination-arrow-left{
     white-space: nowrap;
-    padding-right: 35px;
+    padding-right: 15px;
     margin-top: 14px;
-  }
-
-  .pagination-arrow-right{
-    margin-left: 12px;
-  }
-
-  .pagination-arrow-left{
     margin-right: 12px;
+
+    svg{
+      &#pagination-arrow-left{
+
+            cursor: pointer;
+
+            &:hover{
+              path{
+                &#pagination-arrow-left-fill {
+                  fill: $wl-color-green;
+                }
+              }
+            }
+
+        }
+    }
+
+
   }
+
 
 }
